--- a/_data/preload.yml
+++ b/_data/preload.yml
@@ -1,3 +1,9 @@
-images: []
+images:
+- added: '2024-06-24 12:25:19.941182'
+  iiif: false
+  thumbnail: https://iiif.bodleian.ox.ac.uk/iiif/image/2e8f3f92-7a41-4c30-909f-9a4a0d539fd6/info.json
+  title: ''
+  url: https://iiif.bodleian.ox.ac.uk/iiif/image/2e8f3f92-7a41-4c30-909f-9a4a0d539fd6/info.json
+  user: Tim Dungate
 settings: {}
 version: '2.1'
